api/yamls/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rickandmorty
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rickandmorty
  template:
    metadata:
      labels:
        app: rickandmorty
    spec:
      containers:
        - name: rickandmorty
          image: alicekh/rickandmorty:0.1.0
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
