api/yamls/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rickandmorty
spec:
  selector:
    app: rickandmorty
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
