api/yamls/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rickandmorty-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: rickandmorty.elementor
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rickandmorty
                port:
                  number: 8000
